# project1DA

./: Application.cpp  Application.h  CMakeLists.txt  FileReader.cpp  FileReader.h  FirstScenario.cpp  FirstScenario.h  FourthScenario.cpp  FourthScenario.h  Optimizer.cpp  Optimizer.h  Package.cpp  Package.h  Packages.cpp  Packages.h  README.md  SecondScenario.cpp  SecondScenario.h  ThirdScenario.cpp  ThirdScenario.h  Transport.cpp  Transport.h  main.cpp
Dados/: day2Carrinhas.txt  day3Encomendas.txt  day4Carrinhas.txt  day4Encomendas.txt  sample2Encomendas.txt  sample3Carrinhas.txt
Doxygen/html/: _application_8h_source.html  _file_reader_8h_source.html  _first_scenario_8h_source.html  _fourth_scenario_8h_source.html  _optimizer_8h_source.html  _package_8h_source.html  _second_scenario_8h_source.html  _third_scenario_8h_source.html  _transport_8h_source.html  annotated.html  class_application-members.html  class_application.html  class_file_reader-members.html  class_file_reader.html  class_first_scenario-members.html  class_first_scenario.html  class_fourth_scenario-members.html  class_fourth_scenario.html  class_optimizer-members.html  class_optimizer.html  class_package-members.html  class_package.html  class_second_scenario-members.html  class_second_scenario.html  class_third_scenario-members.html  class_third_scenario.html  class_transport-members.html  class_transport.html  classes.html  dir_47517c146e030d69b2c9f177123a43f9.html  dir_6c33ff24bb6c5a4575fa4f1f50a0e90e.html  dir_99a57271cbef8e14e6bd5b4e2370f459.html  dir_af6a6f553bcb0260109e3c15dd7dc054.html  (+11 more)
(+99 files in other folders)
